--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OG Predict - 预测市场聚合交易终端</title>
+    <title>SUI Predict - 预测市场聚合交易终端</title>
     <script>
       (function() {
         const theme = localStorage.getItem('og-predict-theme') ||
